--- a/config/database.yml
+++ b/config/database.yml
@@ -21,11 +21,8 @@ test:
   database: db/test.sqlite3
 
 production:
-    <<: *default
-    adapter: postgresql
-    encoding: unicode
-    database: <%= ENV['RDS_DB_NAME'] %>
-    username: <%= ENV['RDS_USERNAME'] %>
-    password: <%= ENV['RDS_PASSWORD'] %>
-    host: <%= ENV['RDS_HOSTNAME'] %>
-    port: <%= ENV['RDS_PORT'] %>
+  encoding: utf8
+  database: example_production
+  adapter: postgresql
+  host: localhost
+  password:
